examples/deployment-ready.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp:latest
        imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
