examples/pod.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: myapp:latest
    imagePullPolicy: Never
